# lmss-suggestion-api

./: .env.json.template  .gitignore  .mypy.ini  .pylintrc  LICENSE  README.md  pyproject.toml
docker/: Dockerfile  build.sh  run.sh
lmss_suggestion_api/: __init__.py  api.py  api_logger.py  api_settings.py  run.sh  suggester_engine.py
lmss_suggestion_api/router/: core.py  suggest.py
lmss_suggestion_api/schema/: core.py  suggest.py
