[tool.poetry]
name = "lmss-suggestion-api"
version = "0.1.1"
description = "SALI LMSS Suggestion API"
authors = ["273 Ventures LLC <opensource@273ventures.com>"]
license = "MIT"
packages = [{include = "lmss_suggestion_api"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.6"
fastapi = "^0.95.0"
hypercorn = "^0.14.3"
tiktoken = "^0.3.1"
openai = "^0.27.2"
lmss = {url = "https://github.com/273v/python-lmss/archive/refs/heads/main.zip"}

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
mypy = "^1.1.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
